--- a/English.lproj/Settings.xib
+++ b/English.lproj/Settings.xib
@@ -175,7 +175,7 @@
 										<bytes key="NSWhite">MC42NjY2NjY2OQA</bytes>
 									</object>
 								</object>
-								<object class="NSColor" key="NSTextColor" id="1043569451">
+								<object class="NSColor" key="NSTextColor" id="919448148">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MC45MzQ3ODI2MiAwLjkzNDc4MjYyIDAuOTM0NzgyNjIAA</bytes>
 								</object>
@@ -194,21 +194,21 @@
 								<reference key="NSSupport" ref="88075544"/>
 								<reference key="NSControlView" ref="753645226"/>
 								<reference key="NSBackgroundColor" ref="969125410"/>
-								<reference key="NSTextColor" ref="1043569451"/>
+								<reference key="NSTextColor" ref="919448148"/>
 							</object>
 						</object>
-						<object class="NSTextField" id="792133865">
+						<object class="NSTextField" id="66327431">
 							<reference key="NSNextResponder" ref="143712367"/>
 							<int key="NSvFlags">268</int>
 							<string key="NSFrame">{{77, 59}, {127, 17}}</string>
 							<reference key="NSSuperview" ref="143712367"/>
 							<bool key="NSEnabled">YES</bool>
-							<object class="NSTextFieldCell" key="NSCell" id="757739282">
+							<object class="NSTextFieldCell" key="NSCell" id="75321630">
 								<int key="NSCellFlags">68288064</int>
 								<int key="NSCellFlags2">272630784</int>
 								<string key="NSContents">Option-Shift-Space</string>
 								<reference key="NSSupport" ref="88075544"/>
-								<reference key="NSControlView" ref="792133865"/>
+								<reference key="NSControlView" ref="66327431"/>
 								<reference key="NSBackgroundColor" ref="969125410"/>
 								<object class="NSColor" key="NSTextColor">
 									<int key="NSColorSpace">1</int>
@@ -355,7 +355,7 @@
 							<reference ref="755459460"/>
 							<reference ref="63952279"/>
 							<reference ref="327987454"/>
-							<reference ref="792133865"/>
+							<reference ref="66327431"/>
 						</object>
 						<reference key="parent" ref="830423511"/>
 					</object>
@@ -449,17 +449,17 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">45</int>
-						<reference key="object" ref="792133865"/>
+						<reference key="object" ref="66327431"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="757739282"/>
+							<reference ref="75321630"/>
 						</object>
 						<reference key="parent" ref="143712367"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">46</int>
-						<reference key="object" ref="757739282"/>
-						<reference key="parent" ref="792133865"/>
+						<reference key="object" ref="75321630"/>
+						<reference key="parent" ref="66327431"/>
 					</object>
 				</object>
 			</object>
@@ -502,7 +502,7 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>{{335, 651}, {312, 99}}</string>
 					<string>{{335, 651}, {312, 99}}</string>
-					<integer value="1"/>
+					<boolean value="NO"/>
 					<string>{{33, 99}, {480, 360}}</string>
 					<boolean value="YES" id="5"/>
 					<reference ref="5"/>
@@ -554,6 +554,10 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">USSettingsController</string>
 					<string key="superclassName">NSWindowController</string>
+					<object class="NSMutableDictionary" key="outlets">
+						<string key="NS.key.0">statusItem</string>
+						<string key="NS.object.0">NSStatusItem</string>
+					</object>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/Settings/USSettingsController.h</string>
