Added support for: bit.ly, goo.gl, ndurl.com, kl.am, qr.cx. Removed tr.im. Added JSONKit support. Fixed some bugs in OSX 10.6. There is still an issue with the test app in 64 bit.

--- a/English.lproj/Settings.xib
+++ b/English.lproj/Settings.xib
@@ -2,9 +2,9 @@
 <archive type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="7.03">
 	<data>
 		<int key="IBDocument.SystemTarget">1050</int>
-		<string key="IBDocument.SystemVersion">9G55</string>
-		<string key="IBDocument.InterfaceBuilderVersion">677</string>
-		<string key="IBDocument.AppKitVersion">949.43</string>
+		<string key="IBDocument.SystemVersion">9L31a</string>
+		<string key="IBDocument.InterfaceBuilderVersion">680</string>
+		<string key="IBDocument.AppKitVersion">949.54</string>
 		<string key="IBDocument.HIToolboxVersion">353.00</string>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -348,10 +348,10 @@
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="753645226"/>
-							<reference ref="755459460"/>
 							<reference ref="63952279"/>
 							<reference ref="327987454"/>
 							<reference ref="1025841882"/>
+							<reference ref="755459460"/>
 						</object>
 						<reference key="parent" ref="830423511"/>
 					</object>
